Fixed bug of scroll down button in hero sec being visible above menubar

--- a/portfolio-website/src/app/home/home.component.scss
+++ b/portfolio-website/src/app/home/home.component.scss
@@ -92,11 +92,11 @@
     user-select: none; /* Standard syntax */
 }
 
-.demo a {
+.scroll-down-button a {
     position: absolute;
     bottom: 80px;
     left: 50%;
-    z-index: 150;
+    z-index: 75;
     display: inline-block;
     -webkit-transform: translate(0, -50%);
     transform: translate(0, -50%);
@@ -106,10 +106,10 @@
     text-decoration: none;
     transition: opacity .3s;
 }
-.demo a:hover {
+.scroll-down-button a:hover {
     opacity: .5;
 }
-#section04 a span {
+#scroll-down-sec a span {
     position: absolute;
     top: 0;
     left: 50%;
